--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.1.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -28,7 +29,9 @@
       "react-app",
       "react-app/jest"
     ],
-    "plugins": ["react"]
+    "plugins": [
+      "react"
+    ]
   },
   "browserslist": {
     "production": [
